Bug 513203 - Direct scanout doesn't work if you have Battle.net Launcher opened
Summary: Direct scanout doesn't work if you have Battle.net Launcher opened
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: 6.5.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-11 06:22 UTC by username
Modified: 2025-12-18 05:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description username 2025-12-11 06:22:31 UTC
SUMMARY
If you have Battle.net Launcher opened, direct scanout stop working. if you exit Battle.net Launcher, then direct scanout works again.
It is regression 6.4.5 -> 6.5.0.
I made video to better see the issue: https://youtu.be/Ejs6mu2x7r0
KWin debug console: https://imgur.com/a/XHI5q5G

STEPS TO REPRODUCE
1. Load showcompositing effect in the debug console (qdbus org.kde.KWin /KWin org.kde.KWin.showDebugConsole)
2. Start Battle.net Launcher
2. Open any fullscreen application. It can be game, fullscreen vkcube or even web browser

OBSERVED RESULT
Direct scanout doesn't work

EXPECTED RESULT
Working direct scanout

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1
GPU: AMD Radeon RX 6900 XT
Comment 1 Bug Janitor Service 2025-12-15 16:07:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8568
Comment 2 Zamundaaa 2025-12-15 18:24:23 UTC
Git commit 8a724ada9ef0a478402933f647da3501f40275e3 by Xaver Hugl.
Committed on 15/12/2025 at 16:06.
Pushed by zamundaaa into branch 'master'.

scene/workspacescene: ignore items with an opacity of zero

They're irrelevant for both direct scanout and overlay candidate search.

M  +5    -1    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/-/commit/8a724ada9ef0a478402933f647da3501f40275e3
Comment 3 Zamundaaa 2025-12-15 18:57:59 UTC
Git commit 032b7941600b14063f7d74cccd7c9cb32572c7f3 by Xaver Hugl.
Committed on 15/12/2025 at 18:27.
Pushed by zamundaaa into branch 'Plasma/6.5'.

scene/workspacescene: ignore items with an opacity of zero

They're irrelevant for both direct scanout and overlay candidate search.


(cherry picked from commit 8a724ada9ef0a478402933f647da3501f40275e3)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +5    -1    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/-/commit/032b7941600b14063f7d74cccd7c9cb32572c7f3