scene/workspacescene: ignore items with an opacity of zero

They're irrelevant for both direct scanout and overlay candidate search.

BUG: 513203


(cherry picked from commit 8a724ada9ef0a478402933f647da3501f40275e3)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>